update admin panel

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -84,6 +84,7 @@
           <button class="cancel" onclick="hideModal()">Cancel</button>
         </div>
       </div>
+
       <!-- Main section -->
       <div class="main">
         <div class="topbar flex-space-between">
@@ -371,7 +372,7 @@
             <!-- add blog -->
             <div class="addBlog">
               <div class="cardHeader">
-                <h2>add Blog</h2>
+                <h2 id="textToChange">add Blog</h2>
               </div>
               <div class="add-blog-container">
                 <div class="top-title-img">
@@ -402,7 +403,7 @@
                     <p>Hello World!</p>
                   </div>
                   <p class="add-blog-btn">
-                    <a href="#" class="btn">Add Blog</a>
+                    <a href="#" class="btn" id="btnUpdate">Add Blog</a>
                   </p>
                 </div>
               </div>
