--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <li><a href="#experience">Experiences</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#blog">Blogs</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="admin-dashboard.html">Contact</a></li>
         </ul>
       </div>
       <div class="login-btn">
