text admin panel

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
 
           <li><a href="#blog" onclick="toggleMenu();">Blogs</a></li>
-          <li><a href="#contact" onclick="toggleMenu();">Contact</a></li>
+          <li>
+            <a href="admin-dashboard.html" onclick="toggleMenu();">Contact</a>
+          </li>
         </div>
       </div>
     </nav>
