--- a/blogs-list.html
+++ b/blogs-list.html
@@ -43,13 +43,12 @@
     <section id="blogs_list">
       <div class="search-box">
         <p class="section__text__p1">Latest blogs</p>
-        <form action="">
-          <input type="text" placeholder="Search..." class="search-input" /><img
-            src="assets/icons/icons8-search-50.png"
-            alt="search"
-            class="search-icon"
-          />
-        </form>
+        <div class="search">
+          <label>
+            <input type="text" placeholder="Search here" />
+            <ion-icon name="search-outline"></ion-icon>
+          </label>
+        </div>
       </div>
       <!-- list of blogs -->
       <div class="container flex-center flex-wrap">
