--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ul>
       </div>
       <div class="login-btn">
-        <a href="admin-dashboard.html">login</a>
+        <a href="login.html">login</a>
       </div>
     </nav>
     <nav id="hamburger-nav">
@@ -464,7 +464,7 @@
     <section id="contact">
       <p class="section__text__p1">Get in touch</p>
       <h1 class="title">Contact</h1>
-      <div class="flex-space-between flex-wrap">
+      <div class="flex-space-between flex-wrap gap-2">
         <div class="contact-social-media flex-space-around flex-column">
           <p class="contact-social-media-items">
             <img
@@ -503,7 +503,7 @@
     <footer>
       <section>
         <p class="footer__text__p1">Portfolio of Michel Ange</p>
-        <div class="flex-space-between flex-wrap">
+        <div class="flex-space-between flex-wrap gap-2">
           <div class="footer-link-container flex-space-around flex-column">
             <p class="footer-links-items">
               <a href="#about">About</a>
