--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
   <body id="login-body">
     <div class="center">
       <h1>Login</h1>
-      <form method="POST" onsubmit="return validateForm()">
+      <form onsubmit="subvalidateForm()">
         <div class="txt_field">
           <input type="text" id="username" required />
           <span></span>
