--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -375,6 +375,7 @@
                 <h2 id="textToChange">add Blog</h2>
               </div>
               <div class="add-blog-container">
+                <p id="alert" style="color: brown">he</p>
                 <div class="top-title-img">
                   <div class="upload-img-container">
                     <input type="file" id="file" accept="image/*" hidden />
@@ -399,6 +400,7 @@
                     </form>
                   </div>
                 </div>
+
                 <!-- ===============Rich text editor================== -->
                 <div class="rich-text-container">
                   <div id="editor">
