work on adding blog and comment

--- a/detail.html
+++ b/detail.html
@@ -36,48 +36,6 @@
     </nav>
 
     <section id="blog-detail">
-      <h1 class="single__blog-title blog-p-y blog-bold">
-        The start-ups making robots a reality
-      </h1>
-      <p class="single__blog-info blog-p-y">
-        By <span class="blog-bold">Michel</span> | February/ 12/ 2024 . 4 min
-        read
-      </p>
-      <div class="single__blog-img">
-        <img src="assets/blog1.jpg" alt="blog1 image" class="blog-p-y" />
-      </div>
-      <p class="blog-description blog-p-y">
-        Is it harder for machines to mimic the way humans move or the way humans
-        think? If you had asked me this question a decade ago, my answer would
-        have been “think.” So much of how the brain works is still a mystery.
-        And yet, in just the last year, advancements in artificial intelligence
-        have resulted in computer programs that can create, calculate, process,
-        understand, decide, recognize patterns, and continue learning in ways
-        that resemble our own. Building machines that operate like our
-        bodies—that walk, jump, touch, hold, squeeze, grip, climb, slice, and
-        reach like we do (or better)—would seem to be an easier feat in
-        comparison. Surprisingly, it hasn’t been. Many robots still struggle to
-        perform basic human tasks that require the dexterity, mobility, and
-        cognition most of us take for granted. But if we get the technology
-        right, the uses for robots will be almost limitless: Robots can help
-        during natural disasters when first responders would otherwise have to
-        put their lives on the line—or during public health crises like the
-        COVID pandemic, when in-person interactions might spread disease. On
-        farms, they can be used instead of toxic chemical herbicides to manually
-        pull weeds. They can work long days lugging hundred- or thousand-pound
-        loads around factory floors. A good enough robotic arm will also be
-        invaluable as a prosthesis. I understand concerns about robots taking
-        people’s jobs, an unfortunate consequence of almost every new
-        innovation—including the internet, which (for example) turned everyone
-        into a travel agent and eliminated much of the vacation-planning
-        industry. If robots have a similar impact on employment, governments and
-        the private sector will have to help people navigate the transition. But
-        given present labor shortages in our economy and the dangerous or
-        unrewarding nature of certain professions, I believe it’s less likely
-        that robots replace us in jobs we love and more likely that they’ll do
-        work people don’t want to be doing. In the process, they can make us
-        safer, healthier, more productive, and even less lonely.
-      </p>
       <div class="blog-links flex-space-between">
         Read This Next
         <span
@@ -353,5 +311,7 @@
         <p class="copylight">© 2024 The Michel Ange LLC </p>
       </section>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
