--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -217,10 +217,16 @@
               <table>
                 <tr>
                   <td>
-                    <div class="imgBx">
-                      <img src="assets/customer02.jpg" alt="" />
-                    </div>
+                    <h4>
+                      John Deo <br />
+                      <span
+                        >Lorem ipsum dolor sit amet, consectetur adipiscing
+                        elit. Nullam porttitor interdum volutpat.
+                      </span>
+                    </h4>
                   </td>
+                </tr>
+                <tr>
                   <td>
                     <h4>
                       John Deo <br />
@@ -233,11 +239,6 @@
                 </tr>
                 <tr>
                   <td>
-                    <div class="imgBx">
-                      <img src="assets/customer02.jpg" alt="" />
-                    </div>
-                  </td>
-                  <td>
                     <h4>
                       John Deo <br />
                       <span
@@ -248,27 +249,6 @@
                   </td>
                 </tr>
                 <tr>
-                  <td>
-                    <div class="imgBx">
-                      <img src="assets/customer02.jpg" alt="" />
-                    </div>
-                  </td>
-                  <td>
-                    <h4>
-                      John Deo <br />
-                      <span
-                        >Lorem ipsum dolor sit amet, consectetur adipiscing
-                        elit. Nullam porttitor interdum volutpat.
-                      </span>
-                    </h4>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <div class="imgBx">
-                      <img src="assets/customer02.jpg" alt="" />
-                    </div>
-                  </td>
                   <td>
                     <h4>
                       John Deo <br />
@@ -332,7 +312,7 @@
                     <td>02/Feb/2024</td>
                     <td>Web development in Rwanda</td>
                     <td>Michel</td>
-                    <td><span class="status panding">panding</span></td>
+                    <td><span class="status panding">pending</span></td>
                     <td class="actions">
                       <span class="update-action"
                         ><ion-icon name="sync-circle-outline"></ion-icon></span
@@ -345,7 +325,7 @@
                     <td>02/Feb/2024</td>
                     <td>Web development in Rwanda</td>
                     <td>Michel</td>
-                    <td><span class="status panding">panding</span></td>
+                    <td><span class="status panding">pending</span></td>
                     <td class="actions">
                       <span class="update-action"
                         ><ion-icon name="sync-circle-outline"></ion-icon></span
@@ -387,7 +367,7 @@
                     <button class="select-image">Select Image</button>
                   </div>
                   <div class="add-blog-title">
-                    <form action="">
+                    <form action="" name="add-blog-form">
                       <label for="title">Title</label>
                       <input
                         type="text"
@@ -407,13 +387,7 @@
                     <p></p>
                   </div>
                   <p class="add-blog-btn">
-                    <a
-                      href="#"
-                      class="btn"
-                      id="btnUpdate"
-                      onclick="addBlogFormValidation()"
-                      >Add Blog</a
-                    >
+                    <a href="#" class="btn" id="btnUpdate">Add Blog</a>
                   </p>
                 </div>
               </div>
@@ -427,99 +401,8 @@
               <div class="cardHeader">
                 <h2>all Messages</h2>
               </div>
-              <table>
-                <tr>
-                  <td>
-                    <div class="imgBx">
-                      <img src="assets/customer02.jpg" alt="" />
-                    </div>
-                  </td>
-                  <td>
-                    <h4>
-                      John Deo <br />
-                      <span
-                        >Lorem ipsum dolor sit amet, consectetur adipiscing
-                        elit. Nullam porttitor interdum volutpat.
-                      </span>
-                    </h4>
-                  </td>
-                  <td class="msgActions">
-                    <span class="update-action"
-                      ><ion-icon name="sync-circle-outline"></ion-icon></span
-                    ><span class="delete-action"
-                      ><ion-icon name="trash-outline"></ion-icon
-                    ></span>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <div class="imgBx">
-                      <img src="assets/customer02.jpg" alt="" />
-                    </div>
-                  </td>
-                  <td>
-                    <h4>
-                      John Deo <br />
-                      <span
-                        >Lorem ipsum dolor sit amet, consectetur adipiscing
-                        elit. Nullam porttitor interdum volutpat.
-                      </span>
-                    </h4>
-                  </td>
-                  <td class="msgActions">
-                    <span class="update-action"
-                      ><ion-icon name="sync-circle-outline"></ion-icon></span
-                    ><span class="delete-action"
-                      ><ion-icon name="trash-outline"></ion-icon
-                    ></span>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <div class="imgBx">
-                      <img src="assets/customer02.jpg" alt="" />
-                    </div>
-                  </td>
-                  <td>
-                    <h4>
-                      John Deo <br />
-                      <span
-                        >Lorem ipsum dolor sit amet, consectetur adipiscing
-                        elit. Nullam porttitor interdum volutpat.
-                      </span>
-                    </h4>
-                  </td>
-                  <td class="msgActions">
-                    <span class="update-action"
-                      ><ion-icon name="sync-circle-outline"></ion-icon></span
-                    ><span class="delete-action"
-                      ><ion-icon name="trash-outline"></ion-icon
-                    ></span>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <div class="imgBx">
-                      <img src="assets/customer02.jpg" alt="" />
-                    </div>
-                  </td>
-                  <td>
-                    <h4>
-                      John Deo <br />
-                      <span
-                        >Lorem ipsum dolor sit amet, consectetur adipiscing
-                        elit. Nullam porttitor interdum volutpat.
-                      </span>
-                    </h4>
-                  </td>
-                  <td class="msgActions">
-                    <span class="update-action"
-                      ><ion-icon name="sync-circle-outline"></ion-icon></span
-                    ><span class="delete-action"
-                      ><ion-icon name="trash-outline"></ion-icon
-                    ></span>
-                  </td>
-                </tr>
+              <table id="adminContactList">
+                <tbody></tbody>
               </table>
 
               <!-- ===========Message pagination=========== -->
@@ -672,7 +555,7 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="localStorage.js"></script>
 
     <!-- ionicons -->
 
