script.js:add function to display blogs, localStorage.js: add function to add blog

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -355,7 +355,7 @@
                 <h2 id="textToChange">add Blog</h2>
               </div>
               <div class="add-blog-container">
-                <p id="alert" style="color: brown">he</p>
+                <p id="addBlogError"></p>
                 <div class="top-title-img">
                   <div class="upload-img-container">
                     <input type="file" id="file" accept="image/*" hidden />
