--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         </div>
 
         <div class="contact-form">
-          <p id="contactError" style="text-align: center"></p>
+          <p id="contactError">E-mail can't be blank!</p>
           <h3 class="comment-title-text">Send a message</h3>
           <form name="contact-form">
             <input
@@ -369,6 +369,7 @@
               name="email"
               id="contactEmail"
               placeholder="Enter Email"
+              value=""
             />
             <label for="message" class="form-label">Message:</label>
             <textarea name="message" id="message" rows="10"></textarea>
