--- a/detail.html
+++ b/detail.html
@@ -312,6 +312,6 @@
       </section>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="details.js"></script>
   </body>
 </html>
