detail.html:design comment form

--- a/detail.html
+++ b/detail.html
@@ -45,7 +45,7 @@
           required
         />
         <input type="text" id="comment" placeholder="Add a comment" required />
-        <button type="submit">Submit</button>
+        <button type="submit" class="btn" id="singleBtnSend">Submit</button>
       </form>
       <div id="commentsList"></div>
     </section>
