--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>admin-dashboard</title>
     <!-- styles -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../assets/css/styles.css" />
     <!-- mediaqueries -->
-    <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel="stylesheet" href="../assets/css/mediaqueries.css" />
+
+    <!-- Dashboard styles -->
+    <link rel="stylesheet" href="dashboard.css" />
     <link
       href="https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css"
       rel="stylesheet"
@@ -555,7 +558,7 @@
         </div>
       </div>
     </div>
-    <script src="localStorage.js"></script>
+    <script src="dashboard.js"></script>
 
     <!-- ionicons -->
 
