--- a/detail/detail.html
+++ b/detail/detail.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog title</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel="stylesheet" href="../assets/css/styles.css" />
+    <link rel="stylesheet" href="../assets/css/mediaqueries.css" />
+    <link rel="stylesheet" href="./detail.css" />
   </head>
   <body>
     <nav id="desktop-nav">
@@ -88,6 +89,6 @@
       </section>
     </footer>
 
-    <script src="details.js"></script>
+    <script src="./details.js"></script>
   </body>
 </html>
