--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Michel Ange | Portifolio</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/mediaqueries.css" />
   </head>
   <body>
     <nav id="desktop-nav">
@@ -110,7 +110,7 @@
             <div class="article-container gap-2 flex-space-around flex-wrap">
               <article class="flex-space-around">
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/icons/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -121,7 +121,7 @@
               </article>
               <article class="flex-space-around">
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/icons/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -132,7 +132,7 @@
               </article>
               <article class="flex-space-around">
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/icons/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -143,7 +143,7 @@
               </article>
               <article class="flex-space-around">
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/icons/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -154,7 +154,7 @@
               </article>
               <article class="flex-space-around">
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/icons/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -165,7 +165,7 @@
               </article>
               <article class="flex-space-around">
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/icons/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -181,7 +181,7 @@
             <div class="article-container gap-2 flex-space-around flex-wrap">
               <article class="flex-space-around">
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/icons/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -192,7 +192,7 @@
               </article>
               <article class="flex-space-around">
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/icons/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -203,7 +203,7 @@
               </article>
               <article class="flex-space-around">
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/icons/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -214,7 +214,7 @@
               </article>
               <article class="flex-space-around">
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/icons/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -442,6 +442,6 @@
       </section>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
