dashboard:delete blog by click on btn

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -101,7 +101,7 @@
             </label>
           </div>
           <div class="admin-user">
-            <img src="assets/customer01.jpg" alt="" id="prof-user-img" />
+            <img src="../assets/customer01.jpg" alt="" id="prof-user-img" />
           </div>
           <div class="sub-menu-wrap">
             <div class="sub-menu">
@@ -127,7 +127,7 @@
                 <span>></span>
               </a>
 
-              <a href="index.html" class="sub-menu-link">
+              <a href="../index.html" class="sub-menu-link">
                 <ion-icon name="log-out-outline"></ion-icon>
                 <p>Logout</p>
                 <span>></span>
@@ -277,67 +277,12 @@
                   <tr>
                     <td>Date</td>
                     <td>Title</td>
-                    <td>Author</td>
                     <td>Status</td>
                     <td>Actions</td>
                   </tr>
                 </thead>
 
-                <tbody>
-                  <tr>
-                    <td>02/Feb/2024</td>
-                    <td>Web development in Rwanda</td>
-                    <td>Michel</td>
-                    <td><span class="status activate">active</span></td>
-                    <td class="actions">
-                      <span class="update-action"
-                        ><ion-icon name="sync-circle-outline"></ion-icon></span
-                      ><span class="delete-action"
-                        ><ion-icon name="trash-outline"></ion-icon
-                      ></span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>02/Feb/2024</td>
-                    <td>Web development in Rwanda</td>
-                    <td>Michel</td>
-                    <td><span class="status panding">panding</span></td>
-                    <td class="actions">
-                      <span class="update-action"
-                        ><ion-icon name="sync-circle-outline"></ion-icon></span
-                      ><span class="delete-action"
-                        ><ion-icon name="trash-outline"></ion-icon
-                      ></span>
-                    </td>
-                  </tr>
-
-                  <tr>
-                    <td>02/Feb/2024</td>
-                    <td>Web development in Rwanda</td>
-                    <td>Michel</td>
-                    <td><span class="status panding">pending</span></td>
-                    <td class="actions">
-                      <span class="update-action"
-                        ><ion-icon name="sync-circle-outline"></ion-icon></span
-                      ><span class="delete-action"
-                        ><ion-icon name="trash-outline"></ion-icon
-                      ></span>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>02/Feb/2024</td>
-                    <td>Web development in Rwanda</td>
-                    <td>Michel</td>
-                    <td><span class="status panding">pending</span></td>
-                    <td class="actions">
-                      <span class="update-action"
-                        ><ion-icon name="sync-circle-outline"></ion-icon></span
-                      ><span class="delete-action"
-                        ><ion-icon name="trash-outline"></ion-icon
-                      ></span>
-                    </td>
-                  </tr>
-                </tbody>
+                <tbody></tbody>
               </table>
               <div class="pagination">
                 <div>
@@ -390,7 +335,9 @@
                     <p></p>
                   </div>
                   <p class="add-blog-btn">
-                    <a href="#" class="btn" id="btnUpdate">Add Blog</a>
+                    <a href="#" class="btnUpdate btn" id="addBlogBtn"
+                      >Add Blog</a
+                    >
                   </p>
                 </div>
               </div>
