--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -80,7 +80,7 @@
       <div class="modal">
         <div class="modalContent">
           <span class="close">×</span>
-          <img src="assets/danger.png" alt="" />
+          <img src="../assets/danger.png" alt="" />
           <p>Are you Sure?</p>
           <p>Do you want to delete it?</p>
           <button class="del" onclick="hideModal()">Delete Blog</button>
