dashboard.js: update blog function

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -338,6 +338,9 @@
                     <a href="#" class="btnUpdate btn" id="addBlogBtn"
                       >Add Blog</a
                     >
+                    <a href="#" class="btnUpdate btn" id="updateBlogBtn"
+                      >update Blog</a
+                    >
                   </p>
                 </div>
               </div>
