index.html: add login btn to hamburger

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ul>
       </div>
       <div class="login-btn">
-        <a href="login.html">login</a>
+        <a href="./login/login.html">login</a>
       </div>
     </nav>
     <nav id="hamburger-nav">
@@ -41,6 +41,11 @@
           <li><a href="#blog" onclick="toggleMenu();">Blogs</a></li>
           <li>
             <a href="#contact" onclick="toggleMenu();">Contact</a>
+          </li>
+          <li>
+            <div class="login-btn">
+              <a href="./login/login.html">login</a>
+            </div>
           </li>
         </div>
       </div>
