--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -66,7 +66,7 @@
           </li>
 
           <li>
-            <a href="index.html">
+            <a href="../index.html">
               <span class="icon"
                 ><ion-icon name="log-out-outline"></ion-icon
               ></span>
@@ -146,7 +146,7 @@
 
           <div class="admin-card">
             <div>
-              <div class="numbers">663</div>
+              <div class="numbers" id="articlesNumber"></div>
               <div class="cardName">Articles</div>
             </div>
           </div>
