script.js:add toggle function

--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -174,42 +174,17 @@
                 <h2>Recent Blogs</h2>
                 <a href="#" class="view-all-btn">View All</a>
               </div>
-              <table>
+              <table id="dashboardRecentBlog">
                 <thead>
                   <tr>
                     <td>Date</td>
                     <td>Title</td>
-                    <td>Author</td>
-                    <td>Status</td>
+
+                    <td>actions</td>
                   </tr>
                 </thead>
 
-                <tbody>
-                  <tr>
-                    <td>02/Feb/2024</td>
-                    <td>Web development in Rwanda</td>
-                    <td>Michel</td>
-                    <td><span class="status activate">active</span></td>
-                  </tr>
-                  <tr>
-                    <td>02/Feb/2024</td>
-                    <td>Web development in Rwanda</td>
-                    <td>Michel</td>
-                    <td><span class="status panding">panding</span></td>
-                  </tr>
-                  <tr>
-                    <td>02/Feb/2024</td>
-                    <td>Web development in Rwanda</td>
-                    <td>Michel</td>
-                    <td><span class="status panding">panding</span></td>
-                  </tr>
-                  <tr>
-                    <td>02/Feb/2024</td>
-                    <td>Web development in Rwanda</td>
-                    <td>Michel</td>
-                    <td><span class="status panding">panding</span></td>
-                  </tr>
-                </tbody>
+                <tbody></tbody>
               </table>
             </div>
             <!-- new messages -->
@@ -217,52 +192,7 @@
               <div class="cardHeader">
                 <h2>Recent Messages</h2>
               </div>
-              <table>
-                <tr>
-                  <td>
-                    <h4>
-                      John Deo <br />
-                      <span
-                        >Lorem ipsum dolor sit amet, consectetur adipiscing
-                        elit. Nullam porttitor interdum volutpat.
-                      </span>
-                    </h4>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <h4>
-                      John Deo <br />
-                      <span
-                        >Lorem ipsum dolor sit amet, consectetur adipiscing
-                        elit. Nullam porttitor interdum volutpat.
-                      </span>
-                    </h4>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <h4>
-                      John Deo <br />
-                      <span
-                        >Lorem ipsum dolor sit amet, consectetur adipiscing
-                        elit. Nullam porttitor interdum volutpat.
-                      </span>
-                    </h4>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <h4>
-                      John Deo <br />
-                      <span
-                        >Lorem ipsum dolor sit amet, consectetur adipiscing
-                        elit. Nullam porttitor interdum volutpat.
-                      </span>
-                    </h4>
-                  </td>
-                </tr>
-              </table>
+              <table id="recentMessageTopTable"></table>
             </div>
           </div>
           <!-- ================= Blog list section =========== -->
